; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_describe.c_process_commit.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_describe.c_process_commit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.commit = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.process_commit_data = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.commit*, i8*)* @process_commit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @process_commit(%struct.commit* %0, i8* %1) #0 {
  %3 = alloca %struct.commit*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.process_commit_data*, align 8
  store %struct.commit* %0, %struct.commit** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.process_commit_data*
  store %struct.process_commit_data* %7, %struct.process_commit_data** %5, align 8
  %8 = load %struct.commit*, %struct.commit** %3, align 8
  %9 = getelementptr inbounds %struct.commit, %struct.commit* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.process_commit_data*, %struct.process_commit_data** %5, align 8
  %13 = getelementptr inbounds %struct.process_commit_data, %struct.process_commit_data* %12, i32 0, i32 0
  store i32 %11, i32* %13, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
